--- a/GestãoCondomínio/Views/Acesso/Index.cshtml
+++ b/GestãoCondomínio/Views/Acesso/Index.cshtml
@@ -45,20 +45,22 @@
             {
                 foreach (AcessoModel acesso in Model)
                 {
-                    <tr>
-                        <th scope="row">@acesso.Id</th>
-                        <td>@acesso.Veiculo</td>
-                        <td>@acesso.Condutor</td>
-                        <td>@acesso.Documento</td>
-                        <td>@acesso.Entrada</td>
-                        <td>@acesso.Saida</td>
-                        <td>
-                            <div class="btn-group" role="group">
-                                <a role="button" class="btn btn-primary" asp-route-id="@acesso.Id" asp-controller="Acesso" asp-action="Editar"><i class="fa fa-edit"></i></a>
-                                <a role="button" class="btn btn-danger" asp-route-id="@acesso.Id" asp-controller="Acesso" asp-action="Apagar"><i class="fa fa-trash"></i></a>
-                            </div>
-                        </td>
-                    </tr>
+            <tr>
+                <th scope="row">@acesso.Id</th>
+                <td>@acesso.Veiculo</td>
+                <td>@acesso.Condutor</td>
+                <td>@acesso.Documento</td>
+                <td>@acesso.Entrada</td>
+                <td>@acesso.Saida</td>
+                <td>@acesso.Destino</td>
+
+                <td>
+                    <div class="btn-group" role="group">
+                        <a role="button" class="btn btn-primary" asp-route-id="@acesso.Id" asp-controller="Acesso" asp-action="Editar"><i class="fa fa-edit"></i></a>
+                        <a role="button" class="btn btn-danger" asp-route-id="@acesso.Id" asp-controller="Acesso" asp-action="Apagar"><i class="fa fa-trash"></i></a>
+                    </div>
+                </td>
+            </tr>
                 }
             }
             else
