--- a/GestãoCondomínio/Views/Prestador/Index.cshtml
+++ b/GestãoCondomínio/Views/Prestador/Index.cshtml
@@ -25,7 +25,7 @@
 
     <br />
 
-    <h1 class="display-4">Listagem de prestadores</h1>
+    <h1 class="display-4">Prestadores de Serviços</h1>
 
     <table class="table" id="table-prestadores">
         <thead>
