--- a/GestãoCondomínio/Views/Visitante/Index.cshtml
+++ b/GestãoCondomínio/Views/Visitante/Index.cshtml
@@ -25,7 +25,7 @@
 
     <br />
 
-    <h1 class="display-4">Listagem de Visitantes</h1>
+    <h1 class="display-4">Visitantes</h1>
 
     <table class="table" id="table-visitantes">
         <thead>
