--- a/GestãoCondomínio/Views/Home/Index.cshtml
+++ b/GestãoCondomínio/Views/Home/Index.cshtml
@@ -9,15 +9,14 @@
         <div class="card">
             <img src="./css/Img_Acesso.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Controle de Acessos</h5>
+                <h5 class="card-title">CONTROLE DE ACESSOS</h5>
             </div>
            
         </div>
         <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="./css/Comunicados.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">COMUNICADOS</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
             </div>
             <div class="card-footer">
                 <small class="text-muted">Last updated 3 mins ago</small>
