--- a/GestãoCondomínio/Views/Home/Index.cshtml
+++ b/GestãoCondomínio/Views/Home/Index.cshtml
@@ -14,23 +14,17 @@
            
         </div>
         <div class="card">
-            <img src="./css/Comunicados.jpg" class="card-img-top" alt="...">
+            <img src="./css/Comunicado.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">COMUNICADOS</h5>
             </div>
-            <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
-            </div>
         </div>
         <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="./css/Encomendas.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">ENCOMENDAS</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
             </div>
-            <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
-            </div>
+           
         </div>
     </div>
 </div>
